src/client/assets/style.css
body {
	/* Visiblity variables default values (display property) */
	--show-sido: none;
	--show-sgg: none;
	--show-emdong: none;
	--show-li: none;
	padding: 0;
	margin: 0;
}

body:has(#show-sido:checked) {
	--show-sido: block;
}

body:has(#show-sgg:checked) {
	--show-sgg: block;
}

body:has(#show-emdong:checked) {
	--show-emdong: block;
}

body:has(#show-li:checked) {
	--show-li: block;
}

@keyframes spin {
	0% {
		transform: rotate(0deg);
	}

	100% {
		transform: rotate(360deg);
	}
}

#main-viewer {
	position: relative;
	width: 100dvw;
	height: 100dvh;
}

#tooltips-container {
	position: absolute;
	top: 0;
	left: 0;
	width: 100%;
	height: 100%;
	pointer-events: none;
	z-index: 100;
}

.tooltip {
	position: fixed;
	pointer-events: none;
	display: none;
	z-index: 100;
	text-shadow: 1px 1px #000;
	font-size: 1.3em;
	white-space: pre;
}

#maps-container {
	position: relative;
	display: flex;
	flex-wrap: wrap;
	flex-flow: wrap row;
	width: 100%;
	height: 100%;

	&[data-displayed-maps='3'] .map {
		width: 33%;
		height: 100%;
	}

	&[data-displayed-maps='2'] .map {
		width: 50%;
		height: 100%;
	}

	&[data-displayed-maps='1'] .map {
		width: 100%;
		height: 100%;
	}
}

.map {
	width: 50%;
	height: 50%;
	box-sizing: border-box;
	border: 1px solid #aaa;

	&#map-sido {
		display: var(--show-sido);
	}

	&#map-sgg {
		display: var(--show-sgg);
	}

	&#map-emdong {
		display: var(--show-emdong);
	}

	&#map-li {
		display: var(--show-li);
	}
}

.map[data-loading='true']::before {
	content: '';
	position: absolute;
	width: 100%;
	height: 100%;
	top: 0;
	left: 0;
	background: #0004;
	z-index: 9999;
}

.map[data-loading='true']::after {
	content: '';
	position: absolute;
	width: 24px;
	height: 24px;
	top: 50%;
	left: 50%;
	transform: translate(-50%, -50%);
	z-index: 10000;

	border: 4px solid #fff;
	border-top: 4px solid transparent;
	border-radius: 50%;
	animation: spin 1s linear infinite;
}

.map[data-loading='false']::before {
	content: attr(data-name);
	position: absolute;
	bottom: 25px;
	left: 5px;
	padding: 2px 8px;
	font-size: 1.2em;
	z-index: 10000;
	color: #fff;
	border-radius: 4px;
	background: #000a;
}

header {
	box-sizing: border-box;
	position: fixed;
	z-index: 200000;
	background: #0008;
	width: 100%;
	top: 0;
	left: 0;
	color: white;
	padding: 0 10px;

	display: flex;
	align-items: center;
	gap: 20px;

	& h1 {
		display: inline-block;
		margin: 0;
		font-size: 1.4em;
	}
}

#search {
	position: relative;

	& #search-results {
		display: none;
		position: absolute;
		transform: translateY(5px);
		background: #fff;
		width: 100%;
		color: #000;
		max-height: 100px;
		overflow-y: auto;
		box-shadow: 0px 0px 5px #0002;

		&:has(.search-result) {
			/* Display border only when search results are present, to avoid ugly floating gray bar */
			border: 1px solid #bbb;
		}

		border-radius: 4px;

		& .search-result {
			box-sizing: border-box;
			padding: 5px 4px;
			cursor: pointer;

			&:hover {
				background: #eee;
			}
		}
	}
}

#info-container {
	position: fixed;
	top: 0;
	left: 0;
	width: 100dvw;
	height: 100dvh;
	justify-content: center;
	align-items: center;
	background: #0004;
	backdrop-filter: blur(10px);
	z-index: 999999;
	display: none;
}

#show-modal {
	position: fixed;
	top: -1000px;
	left: -1000px;
}
body:has(#show-modal:checked) #info-container {
	display: flex;
}

label {
	cursor: pointer;
}

#info-modal {
	box-sizing: border-box;
	width: 800px;
	max-width: 90%;
	height: 600px;
	max-height: 80%;
	padding: 20px;
	background: #fff;
	border: 3px solid #ccc4;
	border-radius: 4px;
	box-shadow: 0px 0px 10px #4444;
	overflow-y: scroll;
}

#close-modal {
	position: absolute;
	top: 10px;
	right: 10px;
	cursor: pointer;
	z-index: 100000;
}

@media screen and (max-width: 800px) {
	header {
		gap: 2px;

		& h1 {
			font-size: 1em;
		}
	}
}

